[gd_scene load_steps=6 format=3 uid="uid://bk48tarmsgeyo"]

[ext_resource type="Script" path="res://Scripts/MenuScripts/PauseMenu.gd" id="1_joiem"]
[ext_resource type="Theme" uid="uid://bh227o258gk1k" path="res://Assets/UI/Styles/TextStyle.tres" id="2_xni7g"]
[ext_resource type="PackedScene" uid="uid://bjefwgtou7ain" path="res://Assets/UI/BackButton.tscn" id="3_3mmdf"]
[ext_resource type="PackedScene" uid="uid://eyta44dyjhb4" path="res://Assets/UI/mainButton.tscn" id="4_3fy7w"]
[ext_resource type="PackedScene" uid="uid://wy3ian2coui8" path="res://Assets/UI/Slider.tscn" id="4_eaps2"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_joiem")

[node name="Options" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabBar" type="TabBar" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -281.0
offset_top = -277.0
offset_right = 255.0
offset_bottom = -233.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_xni7g")
tab_count = 5
clip_tabs = false
scrolling_enabled = false
scroll_to_selected = false
tab_0/title = "General"
tab_1/title = "Audio"
tab_2/title = "Video"
tab_3/title = "Controls"
tab_4/title = "Credits"

[node name="Panel" type="Panel" parent="Options/TabBar"]
modulate = Color(1, 1, 1, 0.67451)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -506.0
offset_top = 18.0
offset_right = 554.0
offset_bottom = 526.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" parent="Options/TabBar" instance=ExtResource("3_3mmdf")]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -468.0
offset_top = 433.0
offset_right = -343.0
offset_bottom = 498.0
grow_horizontal = 2
grow_vertical = 2

[node name="General" type="Control" parent="Options/TabBar"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Quit" parent="Options/TabBar/General" instance=ExtResource("4_3fy7w")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = 81.0
offset_right = 93.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
text = "Leave Game"

[node name="Continue" parent="Options/TabBar/General" instance=ExtResource("4_3fy7w")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = 170.0
offset_right = 93.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2
text = "Continue"

[node name="Audio" type="Control" parent="Options/TabBar"]
visible = false
anchors_preset = 0
offset_left = 50.0
offset_top = 45.0
offset_right = 90.0
offset_bottom = 85.0

[node name="SliderVol" parent="Options/TabBar/Audio" instance=ExtResource("4_eaps2")]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -65.0
offset_top = 91.0
offset_right = 532.0
offset_bottom = 141.0
grow_horizontal = 1
grow_vertical = 1
sliderType = 1

[node name="Label" type="Label" parent="Options/TabBar/Audio/SliderVol"]
layout_mode = 0
offset_left = 190.0
offset_top = -36.0
offset_right = 369.0
offset_bottom = -2.0
text = "Volume Overall"

[node name="SliderVolMusic" parent="Options/TabBar/Audio" instance=ExtResource("4_eaps2")]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -65.0
offset_top = 195.0
offset_right = 532.0
offset_bottom = 245.0
grow_horizontal = 1
grow_vertical = 1
sliderType = 2

[node name="Label" type="Label" parent="Options/TabBar/Audio/SliderVolMusic"]
layout_mode = 0
offset_left = 200.0
offset_top = -36.0
offset_right = 379.0
offset_bottom = -2.0
text = "Music Volume"

[node name="SliderVolSFX" parent="Options/TabBar/Audio" instance=ExtResource("4_eaps2")]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -65.0
offset_top = 305.0
offset_right = 532.0
offset_bottom = 355.0
grow_horizontal = 1
grow_vertical = 1
sliderType = 3

[node name="Label" type="Label" parent="Options/TabBar/Audio/SliderVolSFX"]
layout_mode = 0
offset_left = 164.0
offset_top = -36.0
offset_right = 418.0
offset_bottom = -2.0
text = "Sound Effects Volume"

[node name="Video" type="Control" parent="Options/TabBar"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Fullscreen" type="CheckBox" parent="Options/TabBar/Video"]
layout_mode = 0
offset_left = -152.0
offset_top = 90.0
offset_right = -45.0
offset_bottom = 121.0
scale = Vector2(1.53449, 1.53449)
theme = ExtResource("2_xni7g")
text = "Fullscreen"
icon_alignment = 1
expand_icon = true

[node name="Windowed" type="CheckBox" parent="Options/TabBar/Video"]
layout_mode = 0
offset_left = -152.0
offset_top = 142.0
offset_right = -42.0
offset_bottom = 173.0
scale = Vector2(1.53449, 1.53449)
theme = ExtResource("2_xni7g")
text = "Windowed"
icon_alignment = 1
expand_icon = true

[node name="Borderless" type="CheckBox" parent="Options/TabBar/Video"]
layout_mode = 0
offset_left = -152.0
offset_top = 197.0
offset_right = -41.0
offset_bottom = 228.0
scale = Vector2(1.53449, 1.53449)
theme = ExtResource("2_xni7g")
text = "Borderless"
icon_alignment = 1
expand_icon = true

[node name="OptionButton" type="OptionButton" parent="Options/TabBar/Video"]
layout_mode = 0
offset_left = -181.0
offset_top = 326.0
offset_right = 77.0
offset_bottom = 360.0

[node name="Label" type="Label" parent="Options/TabBar/Video/OptionButton"]
layout_mode = 0
offset_left = 58.0
offset_top = -44.0
offset_right = 186.0
offset_bottom = -10.0
text = "Resolution"

[node name="SliderBrightness" parent="Options/TabBar/Video" instance=ExtResource("4_eaps2")]
layout_mode = 1
offset_left = 150.0
offset_top = 157.0
offset_right = 110.0
offset_bottom = 117.0
sliderType = 0

[node name="Label" type="Label" parent="Options/TabBar/Video/SliderBrightness"]
layout_mode = 0
offset_left = 239.0
offset_top = -48.0
offset_right = 367.0
offset_bottom = -14.0
text = "Brightness"

[node name="Controls" type="Control" parent="Options/TabBar"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Forward" type="Panel" parent="Options/TabBar/Controls"]
layout_mode = 0
offset_left = -175.0
offset_top = 97.0
offset_right = 770.0
offset_bottom = 144.0

[node name="Button" type="Button" parent="Options/TabBar/Controls/Forward"]
layout_mode = 0
offset_left = 672.0
offset_top = 4.0
offset_right = 865.0
offset_bottom = 47.0
theme = ExtResource("2_xni7g")
theme_override_font_sizes/font_size = 25
text = "W"

[node name="forwardLabel" type="Label" parent="Options/TabBar/Controls/Forward"]
layout_mode = 0
offset_left = 21.0
offset_right = 233.0
offset_bottom = 49.0
theme = ExtResource("2_xni7g")
text = "Forward Key"
vertical_alignment = 1

[node name="Backward" type="Panel" parent="Options/TabBar/Controls"]
layout_mode = 0
offset_left = -175.0
offset_top = 158.0
offset_right = 770.0
offset_bottom = 205.0

[node name="Button" type="Button" parent="Options/TabBar/Controls/Backward"]
layout_mode = 0
offset_left = 672.0
offset_top = 4.0
offset_right = 865.0
offset_bottom = 47.0
theme = ExtResource("2_xni7g")
theme_override_font_sizes/font_size = 25
text = "S"

[node name="backLabel" type="Label" parent="Options/TabBar/Controls/Backward"]
layout_mode = 0
offset_left = 20.0
offset_right = 233.0
offset_bottom = 49.0
theme = ExtResource("2_xni7g")
text = "Backward Key"
vertical_alignment = 1

[node name="Right" type="Panel" parent="Options/TabBar/Controls"]
layout_mode = 0
offset_left = -175.0
offset_top = 219.0
offset_right = 770.0
offset_bottom = 266.0

[node name="Button" type="Button" parent="Options/TabBar/Controls/Right"]
layout_mode = 0
offset_left = 672.0
offset_top = 4.0
offset_right = 865.0
offset_bottom = 47.0
theme = ExtResource("2_xni7g")
theme_override_font_sizes/font_size = 25
text = "D"

[node name="rightLabel" type="Label" parent="Options/TabBar/Controls/Right"]
layout_mode = 0
offset_left = 24.0
offset_right = 233.0
offset_bottom = 49.0
theme = ExtResource("2_xni7g")
text = "Right Key"
vertical_alignment = 1

[node name="Left" type="Panel" parent="Options/TabBar/Controls"]
layout_mode = 0
offset_left = -175.0
offset_top = 286.0
offset_right = 770.0
offset_bottom = 333.0

[node name="Button" type="Button" parent="Options/TabBar/Controls/Left"]
layout_mode = 0
offset_left = 672.0
offset_top = 4.0
offset_right = 865.0
offset_bottom = 47.0
theme = ExtResource("2_xni7g")
theme_override_font_sizes/font_size = 25
text = "A"

[node name="leftLabel" type="Label" parent="Options/TabBar/Controls/Left"]
layout_mode = 0
offset_left = 24.0
offset_right = 233.0
offset_bottom = 49.0
theme = ExtResource("2_xni7g")
text = "Left Key"
vertical_alignment = 1

[node name="Interact" type="Panel" parent="Options/TabBar/Controls"]
layout_mode = 0
offset_left = -175.0
offset_top = 355.0
offset_right = 770.0
offset_bottom = 402.0

[node name="Button" type="Button" parent="Options/TabBar/Controls/Interact"]
layout_mode = 0
offset_left = 672.0
offset_top = 4.0
offset_right = 865.0
offset_bottom = 47.0
theme = ExtResource("2_xni7g")
theme_override_font_sizes/font_size = 25
text = "E"

[node name="interactLabel" type="Label" parent="Options/TabBar/Controls/Interact"]
layout_mode = 0
offset_left = 24.0
offset_right = 233.0
offset_bottom = 49.0
theme = ExtResource("2_xni7g")
text = "Interact Key"
vertical_alignment = 1

[node name="Credits" type="Control" parent="Options/TabBar"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Options/TabBar/Credits"]
layout_mode = 0
offset_left = -108.0
offset_top = 150.0
offset_right = 691.0
offset_bottom = 360.0
text = "Pretty much everything done by me, except I did use a human mesh model to create the statues. Would have done it myself but I didn't have time.

Model - 

"

[connection signal="tab_changed" from="Options/TabBar" to="." method="TabChanged"]
[connection signal="pressed" from="Options/TabBar/BackButton" to="." method="BackPressed"]
[connection signal="pressed" from="Options/TabBar/General/Quit/MainButton" to="." method="LeaveGamePressed"]
[connection signal="pressed" from="Options/TabBar/General/Continue/MainButton" to="." method="ContinuePressed"]
[connection signal="toggled" from="Options/TabBar/Video/Fullscreen" to="." method="fullscreenToggled"]
[connection signal="toggled" from="Options/TabBar/Video/Windowed" to="." method="_on_windowed_toggled"]
[connection signal="toggled" from="Options/TabBar/Video/Borderless" to="." method="_on_borderless_toggled"]
[connection signal="item_selected" from="Options/TabBar/Video/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Options/TabBar/Controls/Forward/Button" to="." method="forwardButtonPressed"]
[connection signal="pressed" from="Options/TabBar/Controls/Backward/Button" to="." method="backwardButtonPressed"]
[connection signal="pressed" from="Options/TabBar/Controls/Right/Button" to="." method="rightButtonPressed"]
[connection signal="pressed" from="Options/TabBar/Controls/Left/Button" to="." method="leftButtonPressed"]
[connection signal="pressed" from="Options/TabBar/Controls/Interact/Button" to="." method="interactButtonPressed"]

[editable path="Options/TabBar/General/Quit"]
[editable path="Options/TabBar/General/Continue"]
